--- a/src/index.ejs
+++ b/src/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>remind-vue</title>
+    <title>To-Do powered by JL</title>
     <% if (htmlWebpackPlugin.options.nodeModules) { %>
         <!-- Add `node_modules/` to global paths so `require` works properly in development -->
         <script>
