1.更换fontawesome版本；2.优化任务的添加功能；3.增加任务删除功能；4.修改两处单次拼写错误

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -9,7 +9,7 @@
           require('module').globalPaths.push('<%= htmlWebpackPlugin.options.nodeModules.replace(/\\/g, '\\\\') %>')
         </script>
     <% } %>
-    <link href="https://cdn.bootcss.com/font-awesome/5.8.2/css/all.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/font-awesome/5.10.0-11/css/all.min.css" rel="stylesheet">
 </head>
 <body>
 <div id="index-app"></div>
